<resources>
    <string name="app_name">EchoPilah</string>
    <string name="home">Dashboard</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera">scan sampah</string>
    <string name="apk_name">EcoPilah</string>
    <string name="ajakan">let\'s be part of ecopilah !</string>
    <string name="organic">Organic</string>
    <string name="nonorganic">NonOrganic</string>
    <string name="catalog">Catalog</string>
    <string name="ajakancatalog">processing waste is very easy !</string>
    <string name="ceksampah">CEK SAMPAH MU</string>
    <string name="deteksisampah">MARI CEK SAMPAH</string>
    <string name="desscan">Hai Sobat EcoPilah!! Mari kita cek sampah kita untuk lingkungan yang lebih baik</string>
    <string name="back">Kembali</string>
    <string name="imgsampah">cover</string>
    <string name="title">judul</string>
    <string name="txtorganic">
        Sampah organik adalah sampah yang berasal dari sisa makhluk hidup (alam) seperti hewan, manusia, tumbuhan, dan benda hasil olahannya yang dapat mengalami pembusukan atau pelapukan.\n\n
        Proses pembusukan atau pelapukan sampah organik berlangsung secara alami dengan bantuan mikroorganisme tanpa tambahan bahan kimia dalam waktu yang singkat.\n\n
        Sampah organik dibagi menjadi dua jenis, yaitu sampah organik basah dan sampah organik kering : \n\n
        1.Sampah Organik Basah: Sampah organik basah adalah sampah organik yang mempunyai kandungan air yang cukup tinggi. Contohnya kulit buah, sisa sayuran, kulit sayuran, dan biji buah.\n\n
        2.Sampah Organik Kering: Sampah organik kering adalah bahan organik yang kandungan airnya kecil. Contoh sampah organik kering di antaranya, kayu atau ranting pohon, dan dedaunan kering, sisik ikan, cangkang kerang, kulit telur, batok kelapa, dan serbuk gergaji.\n\n

        Pengolahan sampah organik sangat mudah dan tidak memerlukan biaya mahal. Hasil pengolahan sampah organik dapat dimanfaatkan sebagai pakan ternak dan pupuk kompos. Hasil pembusukan sampah organik sangat baik bagi tanah dan tumbuhan karena mengandung banyak zat hara.\n\n
    </string>
    <string name="txt_nonorganic">
    Sampah non-organik atau sampah anorganik adalah sampah yang dihasilkan dari bahan-bahan non-hayati, seperti produk sintetik atau hasil proses teknologi pengolahan bahan tambang.Sampah ini tidak dapat diproses secara alami dan memerlukan waktu yang lama untuk terurai.Berikut adalah beberapa contoh sampah anorganik:\n\n
    1.Sampah Plastik: Barang-barang yang berasal dari plastik memiliki beberapa keunggulan seperti tidak mudah berkarat dan tahan lama. Namun, jika sudah tidak berfungsi, barang-barang ini akan menjadi sampah plastik yang sulit terurai secara alami atau membutuhkan waktu yang sangat lama.\n\n
    2.Sampah Logam: Sampah ini adalah limbah yang berasal dari bahan logam. Contoh sampah non-organik logam adalah besi, kaleng, alumunium, timah, dan jenis logam lainnya.\n\n
    3.Sampah Gelas atau Kaca: Sampah non-organik ini berasal dari bahan kaca. Contohnya adalah gelas atau piring yang telah pecah dan tidak dapat lagi digunakan.\n\n

    Pengolahan sampah anorganik memerlukan pengolahan khusus untuk dapat didaur ulang. Salah satu caranya adalah menjualnya dalam bentuk utuh, seperti plastik wadah pembungkus makanan, botol kaca, botol plastik, sisa gelas air mineral, kaleng, kaca, kertas koran, kertas galon, kertas HVS, dan lainnya\n\n
    </string>
    <string name="semboyan">Managing waste wisely is not only a responsibility, but also an opportunity.</string>
    <string name="organic_desc">Yeay!! Sampah yang kamu deteksi adalah sampah jenis organik</string>
    <string name="non_organic_desc">Yeay!! Sampah yang kamu deteksi adalah sampah jenis Non - organik</string>
    <string name="done">Done</string>
    <string name="organik">Organik</string>
    <string name="non_organik">Non-organik</string>
    <string name="nothing">Tidak Ada Gambar</string>
    <string-array name="data_title">
        <item>Plastic</item>
        <item>\nPaper</item>
        <item>\nMetal</item>
        <item>Glass</item>
    </string-array>
</resources>