<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="300dp"
    app:cardCornerRadius="30dp"
    android:backgroundTint="@color/white"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="19dp">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/tv_judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/rubik_mono_one"
            android:gravity="center"
            android:text="@string/organic"
            android:textColor="@color/ijo_second"
            android:textSize="24sp" />



        <TextView
            android:id="@+id/tv_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/organic_desc"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_extrabold"
            android:text="@string/done" />

    </LinearLayout>

</androidx.cardview.widget.CardView>